# flow

./: README.md  TODOs  pyproject.toml  requirements.txt  setup.py
bayes/: README.md  distribution.py  map.py  posterior.py
bayes/tests/: test_distribution.py  test_map.py  test_posterior.py
flow/: README.md  flow.py  integrators.py  other.py  process.py  sdes.py  utils.py
flow/tests/: test.py  test_flow.py  test_integrators.py  test_operators.py  test_sdes.py
notebooks/: gaussian-posterior.ipynb  gmm-posterior.ipynb
notebooks-and-scripts/: digits-inference.py  gaussian-posterior.py  gmm-posterior.ipynb  map-test.py  modes.py  plot_pbs.py  rl-posterior.ipynb  sinterp-interpolators.ipynb  world-model.py
notes/: design-decisions.md
sinterp/: README.md  couplings.py  interpolants.py  stochasticfield.py  utils.py
sinterp/tests/: test_couplings.py  test_exact_si.py  test_interp.py  test_model.py  test_model.py.bak
